# data-swiss-knife

./: .gitignore  README.md  pyproject.toml
src/data_swiss_knife/: __init__.py  cli.py  launcher.py
src/data_swiss_knife/db_generator/: __init__.py  database.py  file_reader.py  gui.py  type_detector.py
src/data_swiss_knife/query_runner/: __init__.py  executor.py  gui.py  output.py  parameters.py
tests/: __init__.py  test_cli.py
