[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-swiss-knife"
version = "0.1.0"
description = "A versatile data processing toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Ege Can Kapar", email = "142752113+Yushiyima@users.noreply.github.com" }
]
keywords = ["data", "processing", "toolkit", "utility", "postgresql", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
data-swiss-knife = "data_swiss_knife.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
